template.yaml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Resources:
  ThiscoveryDBPrivateSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Database ${ResourceName} VPC Private Subnets
        - ResourceName: ThiscoveryDB
      SubnetIds:
        - !Ref VirtualNetworkPrivateSubnet1
        - !Ref VirtualNetworkPrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Database ${ResourceName} VPC Private Subnets
            - ResourceName: ThiscoveryDB
  VirtualNetwork:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName}
            - ResourceName: Thiscovery VPC
      EnableDnsHostnames: true
    Metadata:
      StackeryName: Thiscovery VPC
  VirtualNetworkPrivateSubnet1:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Select
        - 0
        - !Cidr
          - 10.0.0.0/16
          - 4
          - 14
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Private Subnet 1
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPrivateSubnet2:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Select
        - 1
        - !Cidr
          - 10.0.0.0/16
          - 4
          - 14
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Private Subnet 2
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPublicSubnet1:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Select
        - 2
        - !Cidr
          - 10.0.0.0/16
          - 4
          - 14
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Public Subnet 1
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPublicSubnet2:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      CidrBlock: !Select
        - 3
        - !Cidr
          - 10.0.0.0/16
          - 4
          - 14
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Public Subnet 2
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPrivateSubnet1NatGatewayEIP:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  VirtualNetworkPrivateSubnet1NatGateway:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt VirtualNetworkPrivateSubnet1NatGatewayEIP.AllocationId
      SubnetId: !Ref VirtualNetworkPublicSubnet1
  VirtualNetworkPrivateSubnet1RouteTable:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Private Subnet 1 Route Table
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPrivateSubnet1NatGatewayRoute:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VirtualNetworkPrivateSubnet1NatGateway
      RouteTableId: !Ref VirtualNetworkPrivateSubnet1RouteTable
  VirtualNetworkPrivateSubnet1RouteTableAssociation:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VirtualNetworkPrivateSubnet1RouteTable
      SubnetId: !Ref VirtualNetworkPrivateSubnet1
  VirtualNetworkPrivateSubnet2NatGatewayEIP:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  VirtualNetworkPrivateSubnet2NatGateway:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt VirtualNetworkPrivateSubnet2NatGatewayEIP.AllocationId
      SubnetId: !Ref VirtualNetworkPublicSubnet2
  VirtualNetworkPrivateSubnet2RouteTable:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Private Subnet 2 Route Table
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPrivateSubnet2NatGatewayRoute:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VirtualNetworkPrivateSubnet2NatGateway
      RouteTableId: !Ref VirtualNetworkPrivateSubnet2RouteTable
  VirtualNetworkPrivateSubnet2RouteTableAssociation:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VirtualNetworkPrivateSubnet2RouteTable
      SubnetId: !Ref VirtualNetworkPrivateSubnet2
  VirtualNetworkPublicSubnetsInternetGateway:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Public Subnets Internet Gateway
            - ResourceName: Thiscovery VPC
  VirtualNetworkPublicSubnetsInternetGatewayAttachment:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref VirtualNetworkPublicSubnetsInternetGateway
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPublicSubnetsRouteTable:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Virtual Network ${ResourceName} Public Subnets Route Table
            - ResourceName: Thiscovery VPC
      VpcId: !Ref VirtualNetwork
  VirtualNetworkPublicSubnetsInternetGatewayRoute:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VirtualNetworkPublicSubnetsInternetGateway
      RouteTableId: !Ref VirtualNetworkPublicSubnetsRouteTable
  VirtualNetworkPublicSubnet1RouteTableAssociation:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VirtualNetworkPublicSubnetsRouteTable
      SubnetId: !Ref VirtualNetworkPublicSubnet1
  VirtualNetworkPublicSubnet2RouteTableAssociation:
    Metadata:
      StackeryManaged: true
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VirtualNetworkPublicSubnetsRouteTable
      SubnetId: !Ref VirtualNetworkPublicSubnet2
  CoreAPI:
    Type: AWS::Serverless::Api
    Properties:
      Name: !Sub
        - ${ResourceName} Env ${EnvironmentTagName}
        - ResourceName: Core Thiscovery API
      StageName: !Ref EnvironmentAPIGatewayStageName
      DefinitionBody:
        swagger: '2.0'
        info: {}
        securityDefinitions:
          api_key:
            type: apiKey
            name: x-api-key
            in: header
        paths:
          /v1/user/{id}:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${getuserbyuuid.Arn}/invocations
              responses: {}
            patch:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${patchuser.Arn}/invocations
              responses: {}
          /v1/user:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${getuserbyemail.Arn}/invocations
              responses: {}
            post:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${createuserapi.Arn}/invocations
              responses: {}
          /v1/project:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${listprojects.Arn}/invocations
              responses: {}
          /v1/project/{id}:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${getprojectbyuuid.Arn}/invocations
              responses: {}
          /v1/project-user-status:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${getprojectstatuses.Arn}/invocations
              responses: {}
          /v1/userexternalaccount:
            post:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${createuserexternalaccount.Arn}/invocations
              responses: {}
          /v1/userproject:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${listuserprojects.Arn}/invocations
              responses: {}
            post:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${createuserproject.Arn}/invocations
              responses: {}
          /v1/usertask:
            get:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${listusertasks.Arn}/invocations
              responses: {}
            post:
              security:
                - api_key: []
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${createusertask.Arn}/invocations
              responses: {}
          /v1/raise-error:
            post:
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${raiseerror.Arn}/invocations
              responses: {}
          /v1/ping:
            get:
              x-amazon-apigateway-integration:
                httpMethod: POST
                type: aws_proxy
                uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ping.Arn}/invocations
              responses: {}
      EndpointConfiguration: REGIONAL
    Metadata:
      StackeryName: Core Thiscovery API
  getuserbyuuid:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-getuserbyuuid
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: get-user-by-uuid
      CodeUri: api/endpoints
      Handler: user.get_user_by_id_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Environment:
        Variables:
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${ThiscoveryDB}
      Events:
        CoreAPIGETv1userid:
          Type: Api
          Properties:
            Path: /v1/user/{id}
            Method: GET
            RestApiId: !Ref CoreAPI
        Timer5:
          Type: Schedule
          Properties:
            Schedule: !Ref EnvConfigheartbeatintervalAsString
            Input: '{"heartbeat": "Y"}'
          Metadata:
            StackeryName: timer-get-user-by-uuid
    Metadata:
      StackeryName: get-user-by-uuid
  getuserbyemail:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-getuserbyemail
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: get-user-by-email
      CodeUri: api/endpoints
      Handler: user.get_user_by_email_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIGETv1user:
          Type: Api
          Properties:
            Path: /v1/user
            Method: GET
            RestApiId: !Ref CoreAPI
        Timer:
          Type: Schedule
          Properties:
            Schedule: !Ref EnvConfigheartbeatintervalAsString
            Input: '{"heartbeat": "Y"}'
          Metadata:
            StackeryName: timer-get-user-by-email
      Environment:
        Variables:
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:db:${ThiscoveryDB}
    Metadata:
      StackeryName: get-user-by-email
  createuserapi:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-createuserapi
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: create-user
      CodeUri: api/endpoints
      Handler: user.create_user_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
        - SQSSendMessagePolicy:
            QueueName: !GetAtt HubSpotEventQueue.QueueName
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIPOSTv1user:
          Type: Api
          Properties:
            Path: /v1/user
            Method: POST
            RestApiId: !Ref CoreAPI
        Timer6:
          Type: Schedule
          Properties:
            Schedule: !Ref EnvConfigheartbeatintervalAsString
            Input: '{"heartbeat": "Y"}'
          Metadata:
            StackeryName: timer-create-user
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          QUEUE_NAME: !GetAtt HubSpotEventQueue.QueueName
          QUEUE_ARN: !GetAtt HubSpotEventQueue.Arn
          QUEUE_URL: !Ref HubSpotEventQueue
    Metadata:
      StackeryName: create-user
  patchuser:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-patchuser
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: patch-user-api
      CodeUri: api/endpoints
      Handler: user.patch_user_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIPATCHv1userid:
          Type: Api
          Properties:
            Path: /v1/user/{id}
            Method: PATCH
            RestApiId: !Ref CoreAPI
        Timer4:
          Type: Schedule
          Properties:
            Schedule: !Ref EnvConfigheartbeatintervalAsString
            Input: '{"heartbeat": "Y"}'
          Metadata:
            StackeryName: timer-patch-user-api
      Environment:
        Variables:
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
    Metadata:
      StackeryName: patch-user-api
  listprojects:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-listprojects
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: list-projects
      CodeUri: api/endpoints
      Handler: project.list_projects_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIGETv1project:
          Type: Api
          Properties:
            Path: /v1/project
            Method: GET
            RestApiId: !Ref CoreAPI
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
    Metadata:
      StackeryName: list-projects
  getprojectbyuuid:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-getprojectbyuuid
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: get-project-by-uuid
      CodeUri: api/endpoints
      Handler: project.get_project_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIGETv1projectid:
          Type: Api
          Properties:
            Path: /v1/project/{id}
            Method: GET
            RestApiId: !Ref CoreAPI
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
    Metadata:
      StackeryName: get-project-by-uuid
  getprojectstatuses:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-getprojectstatuses
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: get-project-statuses
      CodeUri: api/endpoints
      Handler: project.get_project_status_for_user_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIGETv1projectuserstatus:
          Type: Api
          Properties:
            Path: /v1/project-user-status
            Method: GET
            RestApiId: !Ref CoreAPI
        Timer5:
          Type: Schedule
          Properties:
            Schedule: !Ref EnvConfigheartbeatintervalAsString
            Input: '{"heartbeat": "Y"}'
          Metadata:
            StackeryName: timer-get-project-statuses
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
    Metadata:
      StackeryName: get-project-statuses
  createuserexternalaccount:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-createuserexternalaccount
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: create-user-external-account
      CodeUri: api/endpoints
      Handler: user_external_account.create_user_external_account_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Environment:
        Variables:
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
      Events:
        CoreAPIPOSTv1userexternalaccount:
          Type: Api
          Properties:
            Path: /v1/userexternalaccount
            Method: POST
            RestApiId: !Ref CoreAPI
    Metadata:
      StackeryName: create-user-external-account
  listuserprojects:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-listuserprojects
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: list-user-projects
      CodeUri: api/endpoints
      Handler: user_project.list_user_projects_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Environment:
        Variables:
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
      Events:
        CoreAPIGETv1userproject:
          Type: Api
          Properties:
            Path: /v1/userproject
            Method: GET
            RestApiId: !Ref CoreAPI
    Metadata:
      StackeryName: list-user-projects
  createuserproject:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-createuserproject
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: create-user-project
      CodeUri: api/endpoints
      Handler: user_project.create_user_project_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
      Events:
        CoreAPIPOSTv1userproject:
          Type: Api
          Properties:
            Path: /v1/userproject
            Method: POST
            RestApiId: !Ref CoreAPI
    Metadata:
      StackeryName: create-user-project
  listusertasks:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-listusertasks
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: list-user-tasks
      CodeUri: api/endpoints
      Handler: user_task.list_user_tasks_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Environment:
        Variables:
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
      Events:
        CoreAPIGETv1usertask:
          Type: Api
          Properties:
            Path: /v1/usertask
            Method: GET
            RestApiId: !Ref CoreAPI
    Metadata:
      StackeryName: list-user-tasks
  createusertask:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-createusertask
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: create-user-task
      CodeUri: api/endpoints
      Handler: user_task.create_user_task_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
        - SQSSendMessagePolicy:
            QueueName: !GetAtt HubSpotEventQueue.QueueName
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
          QUEUE_NAME: !GetAtt HubSpotEventQueue.QueueName
          QUEUE_ARN: !GetAtt HubSpotEventQueue.Arn
          QUEUE_URL: !Ref HubSpotEventQueue
      Events:
        CoreAPIPOSTv1usertask:
          Type: Api
          Properties:
            Path: /v1/usertask
            Method: POST
            RestApiId: !Ref CoreAPI
        Timer3:
          Type: Schedule
          Properties:
            Schedule: !Ref EnvConfigheartbeatintervalAsString
            Input: '{"heartbeat": "Y"}'
          Metadata:
            StackeryName: timer-create-user-task
    Metadata:
      StackeryName: create-user-task
  ThiscoveryDB:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: '6'
      AllowMajorVersionUpgrade: true
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: '15'
      CopyTagsToSnapshot: true
      DBInstanceClass: !Ref EnvConfigdbinstancetypeAsString
      DBSubnetGroupName: !Ref ThiscoveryDBPublicSubnetGroup
      DeletionProtection: !Ref EnvConfigDeletionProtectionAsString
      Engine: postgres
      EngineVersion: '10.6'
      MasterUsername: root
      MasterUserPassword: !Ref EnvConfigdbpasswordAsString
      MultiAZ: !Ref EnvConfigmultiAZAsString
      PubliclyAccessible: true
      StorageEncrypted: !Ref EnvConfigStorageEncryptedAsString
      StorageType: gp2
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Database ${ResourceName}
            - ResourceName: Thiscovery DB
      VPCSecurityGroups:
        - !Ref ThiscoveryDBSecurityGroup
    Metadata:
      StackeryName: Thiscovery DB
  ThiscoveryDBPublicSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Database ${ResourceName} VPC Public Subnets
        - ResourceName: ThiscoveryDB
      SubnetIds:
        - !Ref VirtualNetworkPublicSubnet1
        - !Ref VirtualNetworkPublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Database ${ResourceName} VPC Public Subnets
            - ResourceName: ThiscoveryDB
  ThiscoveryDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Database Security Group
      SecurityGroupIngress:
        CidrIp: 131.111.0.0/16
        FromPort: 5432
        IpProtocol: tcp
        ToPort: 5432
        Description: Uni of Cam
      Tags:
        - Key: Name
          Value: !Sub
            - Stack ${StackTagName} Environment ${EnvironmentTagName} Database ${ResourceName} VPC Security Group
            - ResourceName: Thiscovery DB
      VpcId: !Ref VirtualNetwork
  raiseerror:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-raiseerror
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: raise-error
      CodeUri: api/endpoints
      Handler: misc.raise_error_api
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIPOSTv1raiseerror:
          Type: Api
          Properties:
            Path: /v1/raise-error
            Method: POST
            RestApiId: !Ref CoreAPI
    Metadata:
      StackeryName: raise-error
  ping:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-ping
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: ping
      CodeUri: api/endpoints
      Handler: misc.ping
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        CoreAPIGETv1ping:
          Type: Api
          Properties:
            Path: /v1/ping
            Method: GET
            RestApiId: !Ref CoreAPI
    Metadata:
      StackeryName: ping
  HubSpotEventQueue:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: !Sub ${AWS::StackName}-HubSpotEventQueue
    Metadata:
      StackeryName: HubSpot Queue
  Function:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: !Sub ${AWS::StackName}-Function
      Description: !Sub
        - Stack ${StackTagName} Environment ${EnvironmentTagName} Function ${ResourceName}
        - ResourceName: hubspot-event-despatcher
      CodeUri: src/Function
      Handler: handler.handler
      Runtime: python3.6
      MemorySize: !Ref EnvConfiglambdamemorysizeAsString
      Timeout: !Ref EnvConfiglambdatimeoutAsString
      Tracing: Active
      Policies:
        - AWSXrayWriteOnlyAccess
        - AWSLambdaENIManagementAccess
        - AWSSecretsManagerGetSecretValuePolicy:
            SecretArn: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${EnvironmentTagName}/*
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt VirtualNetwork.DefaultSecurityGroup
        SubnetIds:
          - !Ref VirtualNetworkPrivateSubnet1
          - !Ref VirtualNetworkPrivateSubnet2
      Events:
        HubSpotEventQueue:
          Type: SQS
          Properties:
            Queue: !GetAtt HubSpotEventQueue.Arn
            BatchSize: 1
      Environment:
        Variables:
          DB_ID: !Ref ThiscoveryDB
          DB_ADDRESS: !GetAtt ThiscoveryDB.Endpoint.Address
          DB_PORT: !GetAtt ThiscoveryDB.Endpoint.Port
          DB_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${ThiscoveryDB}
          SECRETS_NAMESPACE: !Sub /${EnvironmentTagName}/
    Metadata:
      StackeryName: hubspot-event-despatcher
Parameters:
  StackTagName:
    Type: String
    Description: Stack Name (injected by Stackery at deployment time)
  EnvironmentTagName:
    Type: String
    Description: Environment Name (injected by Stackery at deployment time)
  EnvConfigdbpasswordAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/db/password
  EnvironmentAPIGatewayStageName:
    Type: String
    Description: Environment name used for API Gateway Stage names (injected by Stackery at deployment time)
  EnvConfigDeletionProtectionAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/db/deletion-protection
  EnvConfigheartbeatintervalAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/lambda/heartbeat-interval
  EnvConfiglambdamemorysizeAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/lambda/memory-size
  EnvConfiglambdatimeoutAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/lambda/timeout
  EnvConfigdbinstancetypeAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/db/instance-type
  EnvConfigmultiAZAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/db/multiAZ
  EnvConfigStorageEncryptedAsString:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /<EnvironmentName>/db/storage-encrypted
Metadata:
  EnvConfigParameters:
    EnvConfigdbpasswordAsString: db.password
    EnvConfigDeletionProtectionAsString: db.deletion-protection
    EnvConfigheartbeatintervalAsString: lambda.heartbeat-interval
    EnvConfiglambdamemorysizeAsString: lambda.memory-size
    EnvConfiglambdatimeoutAsString: lambda.timeout
    EnvConfigdbinstancetypeAsString: db.instance-type
    EnvConfigmultiAZAsString: db.multiAZ
    EnvConfigStorageEncryptedAsString: db.storage-encrypted
Outputs:
  DatabaseURL:
    Description: URL of database instance created
    Value: !GetAtt ThiscoveryDB.Endpoint.Address
